--- a/templates/shell.html
+++ b/templates/shell.html
@@ -88,7 +88,7 @@ a img {
     Python {{ python_version }}
 </textarea>
 
-<form id="form" action="shell.do" method="get">
+<form id="form" action="/shell/shell.do" method="get">
     <nobr>
       <textarea class="prompt" id="caret" readonly="readonly" rows="4"
       onfocus="document.getElementById('statement').focus()"
@@ -111,7 +111,7 @@ a img {
     {% endif %}
     | Ctrl-Up for history | Shift-Enter for newline
     | <a href="http://code.google.com/appengine/">
-    <img src="/static/appengine_button_noborder.gif"
+    <img src="/shell/static/appengine_button_noborder.gif"
     style="vertical-align: middle" /></a>
 </p>
 
